Closed Bug 364041 Opened 18 years ago Closed 18 years ago

failure to detect SeaMonkey (>= 1.0) as valid default browsers

Categories

(Firefox :: Migration, defect, P2)

x86
Windows XP
defect

Tracking

()

RESOLVED FIXED
Firefox 3 alpha2

People

(Reporter: Gavin, Assigned: Gavin)

Details

Attachments

(1 file)

Since SeaMonkey now uses "SeaMonkey" as its Internal Name, as opposed to the 1.7 Suite's "apprunner", the Firefox profile migration code doesn't detect it as a valid default browser, which means we don't show the profile migration dialog in the no-existing-profile case.
Attached patch patchSplinter Review
Assignee: nobody → gavin.sharp
Status: NEW → ASSIGNED
Attachment #248823 - Flags: review?(mano)
Priority: -- → P2
Whiteboard: [patch-r?]
Target Milestone: --- → Firefox 3 alpha2
Summary: failure to detect SeaMonkey (> 1.0) as valid default browsers → failure to detect SeaMonkey (>= 1.0) as valid default browsers
Comment on attachment 248823 [details] [diff] [review]
patch

s/MOZILLA_1_7/MOZILLA_SUITE/

r=mano otherwise.
Attachment #248823 - Flags: review?(mano) → review+
mozilla/browser/components/migration/src/nsProfileMigrator.cpp 	1.26
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: [patch-r?]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: