Bug 364041: failure to detect SeaMonkey (>= 1.0) as valid default browsers, which breaks first-startup profile migration, r=mano